<resources>
    <string name="app_name">Onpay</string>
    <string name="title_home">Home</string>
    <string name="pesan">History</string>
    <string name="history">History</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="blank">blank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay">Pay</string>
    <string name="onpay">Onpay</string>
    <string name="profile_image">Profile Image</string>
    <string name="initial_name">Dino Keylas</string>
    <string name="rp_120_000">Rp 120.000</string>
    <string name="your_saldo">Your Saldo</string>
    <string name="top_up">Top Up</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="remind_me">Remind Me</string>
    <string name="check_promos">Wanna check promos around you?</string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="sure">Sure!</string>
    <string name="your_balance">Your Balance</string>
    <string name="merchants_name">Merchants Name</string>
    <string name="lorem_ipsum">Lorem Ipsum dolor sik amet, Lorem Ipsum dolor sik amet,Lorem Ipsum dolor sik amet,Lorem Ipsum dolor sik amet</string>
    <string name="merchants_address">Merchants Address</string>
    <string name="total_amount">Total Amount</string>
    <string name="nol">0</string>
    <string name="gambar">gambar</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_klik_disini">Belum punya akun? Klik disini</string>
    <string name="user_name">User Name</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="next">Next</string>
    <string name="suasana_co">Suasana.co</string>
    <string name="jl_gajayana_no_12_malang">Jl. Gajayana No. 12, Malang</string>
    <string name="total">Total</string>
    <string name="choose_your_friend">Choose Your Friend</string>
    <string name="mikail_afghan">Mikail Afghan</string>
    <string name="ahmad_andriansyah">Ahmad Andriansyah</string>
    <string name="fahmi_alfareza">Fahmi Alfareza</string>
    <string name="riekko_rahardian">Riekko Rahardian</string>
    <string name="gilang_widianto">Gilang Widianto</string>
</resources>
