<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/profile_image"
            android:elevation="100dp"
            android:src="@drawable/logo_onpay_white_word" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/profile_image" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/photo_profile_default"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135dp"
            android:elevation="100dp"
            android:text="@string/initial_name"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:text="@string/rp_120_000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/your_saldo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_topup"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#86D477">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="2dp"
                            android:src="@drawable/top_up" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/top_up"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_history"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#AB5FDC">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="2dp"
                            android:src="@drawable/history" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/history"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_withdrawal"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#f8D052">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="2dp"
                            android:src="@drawable/withdraw" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/withdrawal"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_remindme"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#F67070">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="2dp"
                            android:src="@drawable/remind_me" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/remind_me"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@drawable/place"
                android:scaleType="fitXY"
                android:background="@color/colorPrimaryDark" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10sp"
                    android:gravity="center"
                    android:text="@string/check_promos"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_show_promos"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:padding="0dp"
                    android:backgroundTint="#f8D052"
                    android:text="@string/sure"
                    android:textAllCaps="false"
                    android:textSize="10sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>